--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,20 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccountController!{% endblock %}
+{% block title %}Mon compte {% endblock %}
 
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% block content %}
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Mon compte </h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/MAKA/Documents/GitHub/Reload-symfony/src/Controller/AccountController.php'|file_link(0) }}">src/Controller/AccountController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/MAKA/Documents/GitHub/Reload-symfony/templates/account/index.html.twig'|file_link(0) }}">templates/account/index.html.twig</a></code></li>
-    </ul>
-</div>
+    Bienvenus {{app.user.firstname}} dans votre compte. <br/>
+    c'est dans cet espace que vous allez pouvoir gérer toutes vos informations personnelles.
+
+    <hr>
+    - Modifier mon mot de passe<br/>
+    - Ajouter mes adresse<br/>
+    - Mes commandes<br/>
+    <hr>
+
 {% endblock %}
