--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -10,7 +10,7 @@
     c'est dans cet espace que vous allez pouvoir gérer toutes vos informations personnelles.
 
     <hr>
-    - Modifier mon mot de passe<br/>
+    - <a href="{{ path('account_password') }}"> Modifier mon mot de passe </a><br/>
     - Ajouter mes adresse<br/>
     - Mes commandes<br/>
     <hr>
