--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/reload.css') }}" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -33,23 +34,31 @@
 <body>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="http://127.0.0.1:8000/">Relaod</a>
+        <a class="navbar-brand" href="{{ path('app_home')}}">Relaod</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('app_home') }}">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ path('app_home') }}">Les annonces générales</a>
+                </li>
+                
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_home') }}">Qui sommes-nous ?</a>
+                </li>
+                
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('app_home') }}">Contact</a>
                 </li>
             </ul>
-            {% if app.user %}
-                <a href="{{ path('app_account') }}">Mon compte</a> | <a href="{{ path('app_logout') }}">Déconnexion<a/>
-
-            {% else %}
-            <a href="{{ path('app_login') }}">Connexion</a> | <a href="{{ path('app_register') }}">Inscription<a/>
-
-            {% endif %}
+                <div class="nav-item-custom">
+                    {% if app.user %}
+                        <a href="{{ path('app_account') }}">Mon compte <small>({{ app.user.firstname}})</small></a> | <a href="{{ path('app_logout') }}">Déconnexion<a/>
+                    {% else %}
+                        <a href="{{ path('app_login') }}">Connexion</a> | <a href="{{ path('app_register') }}">Inscription<a/>
+                    {% endif %}
+             </div>
         </div>
     </nav>
 </header>
@@ -120,9 +129,11 @@
     </div><!-- /.container -->
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="footer-custom">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2020 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>
+            &copy; 2017-2020 Reload, <small> <a href="#">Privacy</a> &middot; <a href="#">Terms</a> </small>
+        </p>
     </footer>
 </main>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
