--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -11,8 +11,7 @@
 
     <hr>
     - <a href="{{ path('account_password') }}"> Modifier mon mot de passe </a><br/>
-    - Ajouter mes adresse<br/>
-    - Mes commandes<br/>
+    - <a href="{{ path('dashboard_annonces') }}"> Créer des annonces </a><br/>
     <hr>
 
 {% endblock %}
