--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -3,6 +3,12 @@
 {% block content %}
     <h1> Inscription </h1>
 
-    {{ form(form) }}
-
+ <hr>
+ {% if notification %}
+    <div class="alert alert-info">{{ notification }}</div>
+ {% endif %}
+ 
+ {{ form(form) }}
+ <hr>
+   
 {% endblock %}
