--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -11,7 +11,7 @@
 
     <hr>
     - <a href="{{ path('account_password') }}"> Modifier mon mot de passe </a><br/>
-    - <a href="{{ path('dashboard_annonces') }}"> Créer des annonces </a><br/>
+    - <a href="{{ path('app_poste_annonces_index') }}"> Créer des annonces </a><br/>
     <hr>
 
 {% endblock %}
