annonces fonctionelle sans les images

--- a/templates/poste_annonces/new.html.twig
+++ b/templates/poste_annonces/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Annonces{% endblock %}
 
 {% block content %}
-    <h1>Create new Annonces</h1>
+    <h1>Créer une annonce</h1>
 
     {{ include('poste_annonces/_form.html.twig') }}
 
