--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -4,9 +4,9 @@
     <h1> Inscription </h1>
 
  <hr>
- {% if notification %}
+ {# {% if notification == "erreur lors de l'inscription" %}
     <div class="alert alert-info">{{ notification }}</div>
- {% endif %}
+ {% endif %} #}
  
  {{ form(form) }}
  <hr>
