--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,8 +5,26 @@
 {% block content %}
 
   <!-- Three columns of text below the carousel -->
-  
-
+        <div class="row">   
+            <div class="col-lg-4">
+                <img src="https://cdn.discordapp.com/attachments/921330217153331201/993157663615635476/speedsoft_og_image_optimized.png" class="d-block w-100" alt="...">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img src="https://cdn.discordapp.com/attachments/921330217153331201/993254107286622313/partie-airsoft-15-02-22.jpg" class="d-block w-100" alt="...">
+                <h2>immersion</h2>
+                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4">
+                <img src="https://cdn.discordapp.com/attachments/921330217153331201/993254979261448253/f469f2143546641.627c58978dcae.jpg" class="d-block w-100" alt="...">
+                <h2>Heading</h2>
+                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
         <!-- START THE FEATURETTES -->
 
         <hr class="featurette-divider">
@@ -17,7 +35,7 @@
                 <p class="lead">{{annonce.description | raw}}</p>
             </div>
             <div class="col-md-5">
-            <img class="image-annonces" src="{{asset('\assets\upload\images\annonces' ~ annonce.image)}}"alt="Les images des annonces" >
+            {# <img class="images-annonces" src="{{asset('\assets\upload\images\annonces' ~ annonce.images)}}"alt="Les images des annonces" > #}
             </div>
         </div>
         {% endfor %}
@@ -25,3 +43,4 @@
 
         <!-- /END THE FEATURETTES -->
 {% endblock %}
+
