--- a/templates/poste_annonces/index.html.twig
+++ b/templates/poste_annonces/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Annonces index{% endblock %}
+{% block title %}Créer une annonce{% endblock %}
 
 {% block content %}
-    <h1>Annonces index</h1>
+    <h1>Vos Annonces</h1>
 
     <table class="table">
         <thead>
@@ -23,7 +23,7 @@
                 <td>{{ annonce.id }}</td>
                 <td>{{ annonce.name }}</td>
                 <td>{{ annonce.description }}</td>
-                <td>{{ annonce.active ? 'Yes' : 'No' }}</td>
+                <td>{{ annonce.activer ? 'Yes' : 'No' }}</td>
                 <td>{{ annonce.updatedAt ? annonce.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ annonce.createdAt ? annonce.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
