--- a/templates/poste_annonces/index.html.twig
+++ b/templates/poste_annonces/index.html.twig
@@ -23,7 +23,7 @@
                 <td>{{ annonce.id }}</td>
                 <td>{{ annonce.name }}</td>
                 <td>{{ annonce.description }}</td>
-                <td>{{ annonce.activer ? 'Yes' : 'No' }}</td>
+                <td>{{ annonce.active ? 'true' : 'false' }}</td>
                 <td>{{ annonce.updatedAt ? annonce.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ annonce.createdAt ? annonce.createdAt|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
