--- a/templates/poste_annonces/show.html.twig
+++ b/templates/poste_annonces/show.html.twig
@@ -9,34 +9,34 @@
         <tbody>
             <tr>
                 <th>Id</th>
-                <td>{{ annonce.id }}</td>
+                <td>{{ AnnoncesUser.id }}</td>
             </tr>
             <tr>
                 <th>Name</th>
-                <td>{{ annonce.name }}</td>
+                <td>{{ AnnoncesUser.name }}</td>
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ annonce.description }}</td>
+                <td>{{ AnnoncesUser.description }}</td>
             </tr>
             <tr>
                 <th>Active</th>
-                <td>{{ annonce.active ? 'Yes' : 'No' }}</td>
+                {# <td>{{ AnnoncesUser.active ? 'Yes' : 'No' }}</td> #}
             </tr>
             <tr>
                 <th>UpdatedAt</th>
-                <td>{{ annonce.updatedAt ? annonce.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ AnnoncesUser.updatedAt ? AnnoncesUser.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
                 <th>CreatedAt</th>
-                <td>{{ annonce.createdAt ? annonce.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ AnnoncesUser.createdAt ? AnnoncesUser.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
 
     <a href="{{ path('app_poste_annonces_index') }}">back to list</a>
 
-    <a href="{{ path('app_poste_annonces_edit', {'id': annonce.id}) }}">edit</a>
+    <a href="{{ path('app_poste_annonces_edit', {'id': AnnoncesUser.id}) }}">edit</a>
 
     {{ include('poste_annonces/_delete_form.html.twig') }}
 {% endblock %}
