Récupération des avancé avec git pull

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,21 +8,21 @@
         <div class="row">   
             <div class="col-lg-4">
                 <img src="https://cdn.discordapp.com/attachments/921330217153331201/993157663615635476/speedsoft_og_image_optimized.png" class="d-block w-100" alt="...">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <h2>SpeedGame</h2>
+                <p>Le speed game est, comme son nom l’indique, un type de partie qui se caractérise par son grand dynamisme et sa rapidité. Se jouant sur de petits terrains remplis d’obstacles, le speed game se déroule généralement en intérieur (CQB), même si rien ne s’oppose à des parties en extérieur, à condition de bien baliser le terrain pour forcer les joueurs à s’affronter en combat rapproché.  </p>
+                {# <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> #}
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img src="https://cdn.discordapp.com/attachments/921330217153331201/993254107286622313/partie-airsoft-15-02-22.jpg" class="d-block w-100" alt="...">
-                <h2>immersion</h2>
-                <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <h2>Immersion</h2>
+                <p>La partie Milsim est une vraie simulation militaire. Elle est destinée généralement aux experts qui incarnent le rôle de militaires. L’équipement Airsoft utilisé est similaire à celui utilisé par de vrais militaires. Les joueurs incarnent entièrement le rôle du militaire en adoptant la même gestuelle.</p>
+                {# <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> #}
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img src="https://cdn.discordapp.com/attachments/921330217153331201/993254979261448253/f469f2143546641.627c58978dcae.jpg" class="d-block w-100" alt="...">
-                <h2>Heading</h2>
-                <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+                <img src="https://cdn.discordapp.com/attachments/921330217153331201/1010899025563762778/shutterstock_1701604459.jpg" class="d-block w-100" alt="...">
+                <h2>Cohésion d'équipe</h2>
+                <p>Les adeptes d'airsoft sont amenés à jouer un rôle. Cependant, pour garder la motivation, il peut être intéressant d'en changer au cours de la partie, voire d'en inventer de nouveaux pour mettre un peu de piment dans vos parties. Il faut donc faire preuve de polyvalence.</p>
+                {# <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> #}
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
         <!-- START THE FEATURETTES -->
