--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -77,9 +77,7 @@
                 <img src="https://cdn.discordapp.com/attachments/921330217153331201/997089975482982431/banniere_2147495455.jpg" class="d-block w-100" alt="...">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1>1</h1>
-                        <p>3444</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                        <h1>Il y a des combats qu'on perd avec plaisir parce que la défaite vous libère de l'obsession du défi.</h1>
                     </div>
                 </div>
             </div>
@@ -87,9 +85,7 @@
                 <img src="https://cdn.discordapp.com/attachments/921330217153331201/993152680316899398/airsoft-marseille.jpg" class="d-block w-100" alt="...">
                 <div class="container">
                     <div class="carousel-caption">
-                        <h1>2</h1>
-                        <p>34</p>
-                        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+                        <h1>Si l'ennemi est à portée, vous l'êtes aussi.</h1>
                     </div>
                 </div>
             </div>
