modif de navbar les pages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,15 +41,15 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('app_home') }}">Les annonces générales</a>
+                    <a class="nav-link" href="{{ path('app_home') }}"></a>
                 </li>
                 
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('app_home') }}">Qui sommes-nous ?</a>
+                    <a class="nav-link" href="{{ path('app_home') }}"></a>
                 </li>
                 
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ path('app_home') }}">Contact</a>
+                    <a class="nav-link" href="{{ path('app_home') }}"></a>
                 </li>
             </ul>
                 <div class="nav-item-custom">
@@ -77,7 +77,7 @@
                 <img src="https://cdn.discordapp.com/attachments/921330217153331201/997089975482982431/banniere_2147495455.jpg" class="d-block w-100" alt="...">
                 <div class="container">
                     <div class="carousel-caption text-left">
-                        <h1>Il y a des combats qu'on perd avec plaisir parce que la défaite vous libère de l'obsession du défi.</h1>
+                        <h1>Il y a des combats que l'on perd avec plaisir parce que la défaite vous libère de l'obsession du défi.</h1>
                     </div>
                 </div>
             </div>
