--- a/templates/poste_annonces/new.html.twig
+++ b/templates/poste_annonces/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('poste_annonces/_form.html.twig') }}
 
-    <a href="{{ path('app_poste_annonces_index') }}">back to list</a>
+    <a href="{{ path('app_poste_annonces_index') }}">retour à la liste</a>
 {% endblock %}
