--- a/templates/poste_annonces/show.html.twig
+++ b/templates/poste_annonces/show.html.twig
@@ -12,7 +12,7 @@
                 <td>{{ AnnoncesUser.id }}</td>
             </tr>
             <tr>
-                <th>Name</th>
+                <th>Nom</th>
                 <td>{{ AnnoncesUser.name }}</td>
             </tr>
             <tr>
@@ -24,19 +24,19 @@
                 {# <td>{{ AnnoncesUser.active ? 'Yes' : 'No' }}</td> #}
             </tr>
             <tr>
-                <th>UpdatedAt</th>
+                <th>Mis à jour à</th>
                 <td>{{ AnnoncesUser.updatedAt ? AnnoncesUser.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
             <tr>
-                <th>CreatedAt</th>
+                <th>Créé à</th>
                 <td>{{ AnnoncesUser.createdAt ? AnnoncesUser.createdAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_poste_annonces_index') }}">back to list</a>
-
-    <a href="{{ path('app_poste_annonces_edit', {'id': AnnoncesUser.id}) }}">edit</a>
+    <a href="{{ path('app_poste_annonces_index') }}">retour à la liste</a>
+    <BR/>
+    <a href="{{ path('app_poste_annonces_edit', {'id': AnnoncesUser.id}) }}">Éditer</a>
 
     {{ include('poste_annonces/_delete_form.html.twig') }}
 {% endblock %}
